# open62541-compat

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  LogIt.cmake  README.md  appveyor.yml  boost_appveyor_ci.cmake  boost_custom.cmake  boost_custom_win.cmake  boost_custom_win_VS2017.cmake  boost_lcg.cmake  boost_standard_install.cmake  boost_standard_install_cc7.cmake  boost_windows_ci.cmake  build_standalone.py  custom_boost_cc7.cmake  custom_boost_win_VS2017.cmake  prepare.py  prepare.sh
.github/workflows/: ci.yml  windows.yml
ci/gitlab/: normal.yml
cmake/: Open62541CompatFetchContent.cmake
doc/: AsyncParityDesign.md  ChangeLog.html
examples/: CMakeLists.txt
examples/src/: ex_simple_client_read.cpp
include/: array_templates.h  arrays.h  async_operations.h  logit_logger.h  managed_uaarray.h  methodhandleuanode.h  methodmanager.h  nodemanagerbase.h  opcua_attributes.h  opcua_basedatavariabletype.h  opcua_baseobjecttype.h  opcua_identifiers.h  opcua_p_types.h  opcua_platformdefs.h  opcua_types.h  open62541_compat.h  open62541_compat_common.h  other.h  session.h  simple_arrays.h  srvtrace.h  stack_fake_structures.h  statuscode.h  uabasenodes.h  uabytestring.h  uadatavalue.h  uadatavariablecache.h  uadatetime.h  uaexpandednodeid.h  uanode.h  uanodeid.h  uaobjecttypes.h  uaplatformlayer.h  uasemaphore.h  uaserver.h  uastring.h  uathread.h  uauseridentitytoken.h  uavariant.h
include/uaclient/: uaclientsdk.h  uasession.h
src/: arrays.cpp  async_operations.cpp  logit_logger.cpp  nodemanagerbase.cpp  opcua_basedatavariabletype.cpp  open62541_compat.cpp  statuscode.cpp  uabytearray.cpp  uabytestring.cpp  uadatavalue.cpp  uadatavariablecache.cpp  uadatetime.cpp  uanodeid.cpp  uaserver.cpp  uastring.cpp  uavariant.cpp
src/uaclient/: uasession.cpp
test/: CMakeLists.txt
test/include/: uavariant_test.h
test/src/: arrays_test.cpp  async_io_test.cpp  main.cpp  uabytestring_test.cpp  uadatavalue_test.cpp  uadatetime_test.cpp  uapropertycache_test.cpp  uaqualifiedname_test.cpp  uasdk_surface_test.cpp  uavariant_test.cpp
xsd/: ServerConfig.xsd
